[package]
name = "exchange_sim"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
thiserror = "1.0"
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
log = "0.4.27"
env_logger = "0.11.8"
dashmap = "6.1"  # Thread-safe concurrent hash map
priority-queue = "2.3.1"  # For efficient price-time priority

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"